<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">APDU Reader</string>
    <string name="mode_send_apdu">Send APDUs</string>
    <string name="mode_read_tag">Read Type 4 tag</string>
    <string name="apdu_label">Commands - one per line (hex, or write / writemsg / nlen)</string>
    <string name="apdu_hint">00 A4 04 00 07 D2 76 00 00 85 01 01 00</string>
    <string name="tap_hint">Hold a tag against the phone to run every line</string>
    <string name="add">Add</string>
    <string name="load_read_sequence">Read seq</string>
    <string name="load_write_sequence">Write seq</string>
    <string name="load_command_sequence">Cmd seq</string>
    <string name="clear_input">Clear cmds</string>
    <string name="clear_log">Clear log</string>
</resources>
